--- a/3º Semestre/Programação Web 2/Projeto P2 Beta/style.css
+++ b/3º Semestre/Programação Web 2/Projeto P2 Beta/style.css
@@ -6,6 +6,7 @@
 body {
   height: 100%;
   width: 100%;
+  background-color: greenyellow;
 }
 
 .sidebar{
@@ -66,4 +67,31 @@ body {
   color: #333;
   margin: 0 auto;
   display: block; 
+}
+
+.home-content{
+  position: relative;
+  display: block;
+  margin-left: 240px;
+  height: 100%;
+}
+
+.home-content .welcome-area{
+  padding: 10px 20px;
+}
+
+.home-content .welcome-area h1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 70pt;
+  font-weight: bold;
+  color: orange;
+  text-align: center;
+}
+
+.home-content .welcome-area p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 70pt;
+  font-weight: bold;
+  color: orange;
+  text-align: justify;
 }
