--- a/3º Semestre/Programação Web 2/Projeto P2 Beta/style.css
+++ b/3º Semestre/Programação Web 2/Projeto P2 Beta/style.css
@@ -42,7 +42,7 @@ body {
   font-weight: 400;
 }
 .sidebar .nav-links .log_out{
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
